@@ -1,13 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.475 2005/11/11 00:21:00 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.476 2005/11/11 01:55:03 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
   10 Nov 2005; Andrew Gaffney <agafney@gentoo.org>
   src/net/server/gliserv.py:
   dynamic module reloading (yipee!)
+  send 'Last-Modified' header for real files
+  respond to HEAD with just headers
   src/net/server/handlers/WebGLIHandler.py:
   icons for drives
 
